--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -36,9 +36,9 @@
                                     android:id="@+id/textAmount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="$5,000.00"
+                                    android:text="$50,000,000.00"
                                     android:textColor="@color/white"
-                                    android:textSize="35sp"
+                                    android:textSize="32sp"
                                     android:textStyle="bold"
                                     android:layout_marginBottom="10dp"
                                     />
@@ -62,6 +62,8 @@
                                             android:id="@+id/txtCategoryTitle"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
+                                            android:ellipsize="end"
+                                            android:maxLines="1"
                                             android:text="Transportación"
                                             android:textColor="@color/white"
                                             />
@@ -72,6 +74,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
                                     android:text="Paid by Juan Carlos"
                                     android:textStyle="bold"
                                     android:textColor="@color/white"
@@ -120,40 +124,13 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
-                                    android:text="TextView"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="Gonzales Ortega"
                                     />
 
 
                         </TableRow>
-
-                        <TableRow
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginVertical="7dp"
-
-                            >
-                                <TextView
-                                    android:id="@+id/txtIdTransaction"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Id: "
-                                    app:layout_constraintStart_toStartOf="@+id/guideline11"
-                                    app:layout_constraintTop_toTopOf="@+id/guideline10" />
-                                <TextView
-                                    android:layout_marginLeft="30dp"
-                                    android:layout_marginStart="30dp"
-                                    android:id="@+id/txtIdTransactionDISPLAY"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="TextView"
-
-                                    app:layout_constraintStart_toStartOf="@+id/guideline13"
-                                    app:layout_constraintTop_toTopOf="@+id/guideline10"
-                                    />
-
-                        </TableRow>
-
 
                         <TableRow
                             android:layout_width="wrap_content"
@@ -169,12 +146,15 @@
                                     android:text="@string/date"/>
 
                                 <TextView
+                                    android:id="@+id/txtDateDisplay"
                                     android:layout_marginLeft="30dp"
                                     android:layout_marginStart="30dp"
-                                    android:id="@+id/txtDateDisplay"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="TextView"
+                                    android:layout_weight="1"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="20/09/2021"
                                     />
 
 
@@ -193,12 +173,15 @@
                                     android:text="@string/time"/>
 
                                 <TextView
+                                    android:id="@+id/txtTimeDisplay"
                                     android:layout_marginLeft="30dp"
                                     android:layout_marginStart="30dp"
-                                    android:id="@+id/txtTimeDisplay"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="TextView"
+                                    android:layout_weight="1"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="20:49 "
                                     />
 
 
@@ -217,12 +200,16 @@
                                     android:text="@string/made_by" />
 
                                 <TextView
+
+                                    android:id="@+id/txtRegisteredByDisplay"
                                     android:layout_marginLeft="30dp"
                                     android:layout_marginStart="30dp"
-                                    android:id="@+id/txtRegisteredByDisplay"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="TextView"/>
+                                    android:layout_weight="1"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="Patrici02983"/>
 
 
                         </TableRow>
@@ -240,12 +227,15 @@
                                     android:layout_height="wrap_content"
                                     android:text="@string/notes" />
                                 <TextView
+                                    android:id="@+id/txtNotesDisplay"
                                     android:layout_marginLeft="30dp"
                                     android:layout_marginStart="30dp"
-                                    android:id="@+id/txtNotesDisplay"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="TextView"
+                                    android:layout_weight="1"
+                                    android:ellipsize="end"
+                                    android:maxLines="6"
+                                    android:text="Este es el texto sobre mu dia hoy me levante super fresco a las 12 de la tarde estuvo super divertid"
                                     />
 
                         </TableRow>
@@ -330,15 +320,6 @@
                     android:layout_height="20dp"
                     android:background="@color/toolBar_color"
                     />
-
-                <Button
-                            android:id="@+id/buttonDeleteTransaction"
-                            android:layout_width="180dp"
-                                android:visibility="gone"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="30dp"
-                            android:text="@string/delete"
-                            android:background="@drawable/background_buttons" />
 
 
         </LinearLayout>
