--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -263,10 +263,11 @@
                     android:orientation="horizontal"
                     android:padding="10dp"
                     android:gravity="center">
-                        <com.google.android.material.progressindicator.CircularProgressIndicator
+                       <com.google.android.material.progressindicator.CircularProgressIndicator
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:indeterminate="true"
+                           android:visibility="visible"
                             app:indicatorColor="@color/white"
                             android:id="@+id/progress_indicator_displayTrans"
                             />
@@ -287,21 +288,21 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView7">
 
-                                <TextView
+                               <!-- <TextView
                                     android:id="@+id/text_add_image"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/add_an_image"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/btn_add_image" />
+                                    app:layout_constraintTop_toBottomOf="@+id/btn_add_image" />-->
 
-                                <ImageButton
+                                <ImageView
                                     android:id="@+id/btn_add_image"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="0dp"
+                                    android:layout_height="60dp"
                                     android:contentDescription="@string/add_an_image"
-                                    app:layout_constraintBottom_toTopOf="@+id/text_add_image"
+                                    app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent"
