--- a/app/src/main/res/layout/fragment_choose_stake_holder.xml
+++ b/app/src/main/res/layout/fragment_choose_stake_holder.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.transactions.NewTransaction.ChooseStakeHolder"
-    android:padding="15dp"
     >
 
 
@@ -25,26 +24,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-        <LinearLayout
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout5"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginTop="2dp"
-            android:background="@color/rec_view_transactions"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="10dp"
+            android:background="@drawable/background_accounts_second"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:paddingHorizontal="26dp">
+
             <TextView
                 android:id="@+id/textView11"
+                android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="15sp"
+                android:text="No Stakeholder"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                android:text="No Stakeholder" />
+                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintTop_toTopOf="@+id/imageView3"
+                android:layout_marginStart="15dp" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@drawable/ic_baseline_person_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
