--- a/app/src/main/res/layout/fragment_choose_stake_holder.xml
+++ b/app/src/main/res/layout/fragment_choose_stake_holder.xml
@@ -19,44 +19,40 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <SearchView
-            android:id="@+id/searchChosenStake"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/linearLayout5"
+            android:id="@+id/layoutNoStakeHolder"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="@drawable/background_accounts_second"
             android:gravity="center"
             android:paddingHorizontal="26dp">
 
             <TextView
                 android:id="@+id/textView11"
-                android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="No Stakeholder"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
-                app:layout_constraintTop_toTopOf="@+id/imageView3"
-                android:layout_marginStart="15dp" />
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                app:srcCompat="@drawable/ic_baseline_person_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textView11"
+                app:layout_constraintStart_toEndOf="@+id/textView11"
+                app:layout_constraintTop_toTopOf="@+id/textView11"
+                app:srcCompat="@drawable/ic_baseline_person_24" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewChooseStake"
