color of tab layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,7 @@
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:id="@+id/bottomNavigationView"
+        android:background="@color/toolBar_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
