--- a/app/src/main/res/layout/rec_view_item_all_micros.xml
+++ b/app/src/main/res/layout/rec_view_item_all_micros.xml
@@ -29,16 +29,16 @@
 
         <TextView
             android:id="@+id/text_micros_balance"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:layout_marginRight="15dp"
-            android:text="$4,000.00"
             android:ellipsize="end"
+            android:gravity="end"
             android:maxLines="1"
+            android:text="$4,000.00"
             android:textColor="@color/rec_view_title"
             android:textSize="20sp"
-            android:gravity="end"
             app:layout_constraintBottom_toBottomOf="@+id/text_Account_name_Micros"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_Account_name_Micros"
