added delete attribute and updated header of summary to account for this

--- a/app/src/main/res/layout/bottom_menu_all_transactions.xml
+++ b/app/src/main/res/layout/bottom_menu_all_transactions.xml
@@ -30,6 +30,13 @@
         android:paddingVertical="15dp"
         android:text="@string/payables"
         android:textSize="18sp" />
+    <CheckBox
+        android:id="@+id/check_box_deletedTrans"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="15dp"
+        android:text="@string/deleted_transactions"
+        android:textSize="18sp" />
 
 
 
