--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -287,7 +287,6 @@
             android:layout_marginBottom="2dp" />
 
 
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_newFAB"
             android:layout_width="wrap_content"
@@ -304,6 +303,23 @@
             app:fabCustomSize="60dp"
             app:maxImageSize="40dp"
             app:srcCompat="@drawable/ic_baseline_add_24" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_exportFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="30dp"
+            android:layout_toStartOf="@+id/btn_newFAB"
+            android:layout_toLeftOf="@+id/btn_newFAB"
+            android:alpha="1"
+            android:contentDescription="@string/settings"
+            app:backgroundTint="@color/fb_color"
+            app:fabCustomSize="60dp"
+            app:maxImageSize="40dp"
+            app:srcCompat="@drawable/ic_export" />
 
     </RelativeLayout>
 
